--- a/OLAP/OLAP.csproj
+++ b/OLAP/OLAP.csproj
@@ -134,6 +134,10 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Models\DataBase.cs" />
+    <Compile Include="Models\Dimension.cs" />
+    <Compile Include="Models\Measure.cs" />
+    <Compile Include="Models\OLAPEntities.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -270,7 +274,6 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Files\" />
-    <Folder Include="Models\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="packages.config" />
