--- a/OLAP/Web.config
+++ b/OLAP/Web.config
@@ -58,4 +58,9 @@
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
+  <connectionStrings>
+  <add name="OLAPEntities"
+     connectionString="Data Source=|DataDirectory|\OLAPDB.sdf"
+     providerName="System.Data.SqlServerCe.4.0"/>
+  </connectionStrings>
 </configuration>
