--- a/OLAP/OLAP.csproj
+++ b/OLAP/OLAP.csproj
@@ -136,6 +136,7 @@
     </Compile>
     <Compile Include="Models\DataBase.cs" />
     <Compile Include="Models\Dimension.cs" />
+    <Compile Include="Models\DimensionJson.cs" />
     <Compile Include="Models\Measure.cs" />
     <Compile Include="Models\OLAPEntities.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -257,7 +258,9 @@
     <Content Include="Scripts\FileUpload\jqueryui\jquery.ui.widget.js" />
     <Content Include="Scripts\FileUpload\load-image.debug.js" />
     <Content Include="Scripts\FileUpload\tmpl.debug.js" />
+    <Content Include="Scripts\jquery-1.7.1.js" />
     <Content Include="Scripts\jquery-2.0.2.js" />
+    <Content Include="Scripts\jquery.unobtrusive-ajax.js" />
     <Content Include="Scripts\markers.js" />
     <Content Include="Scripts\stats.min.js" />
     <Content Include="Scripts\three.min.js" />
